@@ -48,17 +48,21 @@
     <p>Please note the <code>JSONConfiguration.FEATURE_POJO_MAPPING</code> 
     feature set with the init parameters in the example Main class. 
     This feature enables the Jackson JAX-RS provider. 
-    If the feature would be set to false or was missing,
+    It the feature would be set to false or was missing,
     the Jackson entity providers would not be utilized.
+
+    <p>To use Jackson specific configuration options, one could implement
+        a <code>ContextResolver&lt;ObjectMapper&gt;</code> provider.
+        For an example of such implementation, see <code>MyObjectMapperProvider</code> class.
     
     <h2>Running the Example</h2>
          <p>Run the example as follows:</p>
         <blockquote><pre>
 mvn clean compile exec:java</pre></blockquote>
         <p>This deploys the JSON from JAXB example using 
-            <a href="http://grizzly.java.net/">Grizzly</a>
+            <a href="https://grizzly.dev.java.net/">Grizzly</a>
         </p>
-        <p>A <a href="http://wadl.java.net/#spec">WADL description</a> may be accessed at the URL:</p>
+        <p>A <a href="http://wadl.dev.java.net/#spec">WADL description</a> may be accessed at the URL:</p>
         <blockquote><code><a href="http://localhost:9998/jacksonjsonprovider/application.wadl">http://localhost:9998/jacksonjsonprovider/application.wadl</a></code></blockquote>
 	
 	<p>The two resources could be accessed via</p>
